# Real_Time_Edge_Detection_Viewer

./: .gitignore  .mailmap  README.md
app/: .gitignore  build.gradle.kts
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  myapplication.cpp
app/src/main/java/com/example/myapplication/: MainActivity.java  OpenGLRenderer.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
